       (changes since jEdit 4.3)
:encoding=UTF-8:

{{{ Version 4.4pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust, Eric Berry, Shlomy
Reinstein, Damien Radtke, Dale Anson, Matthieu Casanova, Eric Le Lay,
Bernhard Walle, Joerg Spieler, Kevin Hunter, François Rey, Dion Whitehead,
Marcelo Vanzin, Jesse Pavel, Bernhard Walle and Jakub Roztočil for
contributing to this release.

{{{ Bug fixes
- Fixed TextArea.selectBlock() when the block is at offset 0
  (Jesse Pavel #3062072)

- Fixed a memory leak in the beanshell snippet replacement
  (Matthieu Casanova #3043132)

- The "buffer" variable is always the current buffer and not the buffer
  where the replacement occurs when using beanshell snippet replacement
  (Matthieu Casanova #3043118)

- Removed workaround in drag & drop code of TextArea that doesn't seem
  useful anymore on Ubuntu and cause exceptions when dropping a Transferable
  that is not a String but has a java.io.InputStream as representation class
  (Matthieu Casanova)

- Fixed caret going to the wrong position when adding explicit folds
  in a buffer that uses an edit mode that has no line comment
  (Matthieu Casanova #2138160)

- Fixed caret going after the explicit folds when adding explicit folds
  to the wrong position when adding explicit folds while having no
  selection, in any edit mode  (Matthieu Casanova)

- When saving a buffer the autoreload option of the buffer was overridden
  by global settings (Matthieu Casanova #2999966)

- Improve indentation settings of the shellscript edit mode.
  (Björn "Vampire" Kautler #3005463)

- Removed the duplicated "Architecture" line from the Debian control file.
  (Björn "Vampire" Kautler #2999456)

- In the manage panel, when selecting a library, the description panel do
  not contains "null" for every fields and the title is set to the jar name
  instead of "null" (Matthieu Casanova)

- Update of textarea scrollbars and bufferSwitcher are now done in
  EventQueue thread (Matthieu Casanova #2946031)
